--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -57,6 +57,10 @@ section {
     font-size: 4vw;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color: white;
     color: black;
@@ -65,12 +69,29 @@ section.normal {
 section.imagem {
     background-color: rgb(58, 52, 52);
     color: white;
+    box-shadow: inset 6px 6px 13px 2px rgba(0, 0, 0, 0.603);
+    background-attachment: fixed;
+}
+
+section#img01 {
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+section#img02 {
+    background-image: url(imagens/background002.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 section.imagem > p {
     padding: 5px;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.445);
     display: inline-block;
+    text-shadow: 1px 1px 0px black;
 }
 
 footer {
