--- a/exercicios/ex026/mq02/estilos/estilos.css
+++ b/exercicios/ex026/mq02/estilos/estilos.css
@@ -1,1 +1,21 @@
 @charset "UTF-8";
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+html, body {
+    width: 100vw;
+    height: 100vh;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(55, 0, 255);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+h1 {
+    color: white;
+    text-shadow: 3px 3px 0px rgb(32, 21, 180);
+    padding: 10px;
+}
