--- a/exercicios/ex026/mq04/estilos/media-query.css
+++ b/exercicios/ex026/mq04/estilos/media-query.css
@@ -2,6 +2,64 @@
 
 /* Todas as demais medias */
 
+/*Pesquisar por typical device breakpoints
+Pequenas Telas: até 720px
+Celular: 375 x 720px
+Tablet: 768 x 1024px
+Telas grandes: Acima de 1366px
+laptop: 1366 por 768
+desktop: 1920 x 1080
+TV: */
+
 @media print {
+    body {
+        background-image: url(../imagens/back-print.jpg); /* isso não precisa */
+        font-family: 'Courier New', Courier, monospace;
+    }
+
+    main h1 {
+        text-shadow: none;
+        color: black;
+    }
+
+    img#phone { display: n+one; }
+    img#tablet { display: none; }
+    img#print { display: block; }
+    img#pc { display: none; }
+    img#tv { display: none; }
     
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    body {
+        background-image: url(../imagens/back-tablet.jpg);
+    }
+    img#phone { display: none; }
+    img#tablet { isplay: block;}
+    img#print { display: none; }
+    img#pc {    display: none; }
+    img#tv {    display: none; }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1366px) {
+    body {
+        background-image: url(../imagens/back-pc.jpg);
+    }
+    img#phone { display: none; }
+    img#tablet { display: none }
+    img#print { display: none; }
+    img#pc { display: block;}
+    img#tv { display: none; }
+    
+}
+
+@media screen and (min-width: 1366px) {
+    body {
+        background-image: url(../imagens/back-tv.jpg);
+    }
+    img#phone { display: none; }
+    img#tablet { display: none }
+    img#print { display: none; }
+    img#pc {    display: none; }
+    img#tv {    display: block;}
 }
