--- a/exercicios/ex026/mq05/estilos/media-query.css
+++ b/exercicios/ex026/mq05/estilos/media-query.css
@@ -1,5 +1,11 @@
 @charset "UTF-8";
 
+@media screen and (max-width: 768px) {
+    menu > ul > li > a {
+        border-top: 2px solid white;
+    }
+}
+
 @media screen and (min-width: 768px) {
     span#iburger {
         display: none;
